# ESP32-LED-Stripe-Server

./: .gitignore  Cargo.toml  Readme.md  cfg.toml.example  sdkconfig.defaults
certs/: create_cert.sh
src/: api_handler.rs  led.rs  main.rs  pwm_rgb_led.rs  rgb_led.rs  rmt_rgb_led.rs
