[package]
name = "esp32-wifi-led-api"
version = "0.1.0"
authors = ["procrastimax <mmeheykeroth@protonmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]

[dependencies]
esp-idf-sys = { version = "~0.32.1", features = ["binstart"] }
esp-idf-svc = { version = "~0.45.0", features = ["experimental"] }
esp-idf-hal = { version = "~0.40.1" }
embedded-svc = { version = "~0.24.0" }
embedded-hal = { version = "~0.2.7" }
toml-cfg = "~0.1.3"
rgb = "~0.8.36"
url = "~2.3.1"

[build-dependencies]
embuild = "~0.30.4"
